# EinFields

./: pyproject.toml
data_generation/: __init__.py
differential_geometry/levi_civita_symbol/: __init__.py
einfields/bh_render/: README.md  __init__.py  main.py  utils.py
einfields/data_generation/: data_lookup_tables.py  generate_data.py  utils_generate_data.py
einfields/data_generation/configs/: gw.yml  kerr_schild.yml  schwarzschild_multiple_coordinates.yml  schwarzschild_spherical.yml
einfields/differential_geometry/: __init__.py  tensor_calculus.py  vectorized_tensor_calculus.py
einfields/differential_geometry/levi_civita_symbol/: levi_civita_symbol.py
einfields/differential_geometry/levi_civita_symbol/symbol_saves/: levi_civita_symbol_2D.npy  levi_civita_symbol_3D.npy  levi_civita_symbol_4D.npy
einfields/einstein_fields/: __init__.py  main.py  train.py
einfields/einstein_fields/configs/: config_train.yml
einfields/einstein_fields/configs/utils_config/: config_arch.yml  config_optimizer.yml  config_schedule.yml
einfields/einstein_fields/nn_models/: PirateNet.py  __init__.py  activations.py  mlp.py  mlp_pinn.py  siren.py  utils.py  wire.py
einfields/einstein_fields/utils/: __init__.py  config_training.py  mini_batch.py  utils_config_grad.py  utils_configs_opt_schedules.py  utils_norm.py  utils_symmetry.py  utils_train.py  utils_validate.py
einfields/finite_difference/: __init__.py  finite_difference_forward_stencils.py  finite_difference_tensors.py
einfields/general_relativity/: __init__.py
einfields/general_relativity/coordinate_transformations/: __init__.py  coord_transform.py
einfields/general_relativity/geodesics/: __init__.py  geodesics_solver.py  utils_geodesics.py
einfields/general_relativity/metrics/: __init__.py  gravitational_waves.py  kerr.py  minkowski.py  schwarzschild.py
finite_difference/: __init__.py
