[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "einfields"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"jax",
	"jaxlib",
	"flax",
	"numpy",
	"matplotlib",
	"scikit-image",
	"natsort",
	"sympy",
	"k3d",
	"absl-py",
	"seaborn",
	"optax",
	"h5py",
	"equinox",
	"tqdm",
	"wandb",
	"pyyaml",
	"ml-collections",
	"diffrax",
	"kfac-jax @ git+https://github.com/google-deepmind/kfac-jax",
	"SOAP_JAX @ git+https://github.com/haydn-jones/SOAP_JAX",
]

[project.scripts]
einfields-train = "einstein_fields.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "bh_render*",
    "data_generation*",
    "differential_geometry*",
    "einstein_fields*",
    "finite_difference*",
    "general_relativity*"
]
exclude = [
    "example_notebooks*",
    "misc*"
]

[tool.setuptools.package-data]
data_generation = ["configs/*.yml"]
einstein_fields = ["configs/*.yml", "configs/utils_config/*.yml"]
bh_render = ["background_img/*"]
"differential_geometry.levi_civita_symbol" = ["symbol_saves/*.npy"]

